Fix spacing around nav.

--- a/app/_scss/pages/_post-page.scss
+++ b/app/_scss/pages/_post-page.scss
@@ -163,9 +163,9 @@
 }
 
 .post-nav {
-  font-size: 16px;
+  font-size: 18px;
   color: $gizra-orange;
-  margin-top: 40px;
+  margin-top: 40px 0;
 
   .next {
     text-align: right;
